<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_app_background"
    tools:context=".ContactActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/default_app_bar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/default_app_bar_text"
            app:title="@string/contact"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:navigationIconTint="@color/default_app_bar_icon_tint"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <TextView
            android:text="@string/contact_subject"
            android:labelFor="@id/email_subject"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/default_app_bar_text"
            android:padding="@dimen/standard_space"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/standard_space"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:counterTextColor="@color/default_app_bar_text"
            app:placeholderTextColor="@color/default_app_bar_text"
            app:boxBackgroundMode="filled"
            app:placeholderText="Subject"
            app:placeholderTextAppearance="@style/TextAppearance.MaterialComponents.Body1">

            <com.google.android.material.textfield.TextInputEditText
                android:background="@color/default_app_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"
                android:lines="1"
                android:id="@+id/email_subject">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/contact_message"
            android:labelFor="@id/email_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textColor="@color/default_app_bar_text"
            android:padding="@dimen/standard_space"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/standard_space"
            app:counterEnabled="true"
            app:counterMaxLength="1000"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@android:color/transparent"
            app:counterTextColor="@color/default_app_bar_text"
            app:placeholderTextColor="@color/default_app_bar_text"
            app:placeholderText="Message"
            app:placeholderTextAppearance="@style/TextAppearance.MaterialComponents.Body1">

            <com.google.android.material.textfield.TextInputEditText
                android:background="@color/default_app_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="1000"
                android:maxLines="3"
                android:id="@+id/email_message">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_space"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_feedback"
            android:text="Submit"
            android:backgroundTint="@color/default_primary_btn_bg"
            android:layout_margin="@dimen/standard_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_space"/>

        <TextView
            android:paddingHorizontal="@dimen/standard_space"
            android:text="Your contact detailed will be treated as per the privacy policy."
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/default_app_bar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/privacy_policy_cv"
            android:elevation="0dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/standard_space"
                android:background="@color/default_app_background"
                android:drawableEnd="@drawable/ic_external_open"
                android:drawablePadding="@dimen/standard_space"
                android:drawableTint="@color/default_primary_btn_bg"
                android:textColor="@color/black"
                android:text="@string/privacy_policy"
                android:textSize="@dimen/options_menu_text_size" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>