<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/parent_cv"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/standard_space"
                android:textColor="@color/black"
                android:text="@string/about"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/app_launcher"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_space"/>

            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="@dimen/standard_space"
                android:textColor="@color/default_primary_btn_bg"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_space"/>

            <TextView
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/standard_space"
                android:text="Solve the number sequence in hexagonal puzzle"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/app_version"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/standard_space"
                android:text="v1.0"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_space"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:background="@color/default_about_developer_info_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingVertical="@dimen/standard_space"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingHorizontal="@dimen/standard_space"
                    android:text="This puzzle game, Hexa Maze, is designed and developed by GujMCQ Developers."
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/more_apps_mb"
                    app:icon="@drawable/ic_apps_more"
                    app:iconGravity="textStart"
                    android:paddingVertical="@dimen/standard_half_space"
                    android:backgroundTint="@color/default_about_more_apps_btn_bg"
                    android:text="More apps from GujMCQ"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="@dimen/standard_space"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_space"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_space"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/contact_on_twitter_cv"
                android:elevation="0dp"
                app:cardBackgroundColor="@color/default_primary_btn_bg"
                app:cardElevation="0dp"
                app:cardCornerRadius="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:drawableTint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:padding="@dimen/standard_space"
                    android:drawablePadding="@dimen/standard_space"
                    android:drawableEnd="@drawable/ic_twitter"
                    android:textColor="@color/white"
                    android:text="@string/join_us_on_twitter"
                    android:textStyle="bold"
                    android:textSize="@dimen/options_menu_text_size" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/policy_cv"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="@dimen/standard_half_space"
                android:layout_margin="@dimen/standard_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:drawableTint="@color/default_primary_btn_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:padding="@dimen/standard_space"
                    android:drawablePadding="@dimen/standard_space"
                    android:drawableEnd="@drawable/ic_external_open"
                    android:textColor="@color/default_popup_secondary_btn_text"
                    android:text="Ready Full Policy"
                    android:textStyle="bold"
                    android:textSize="@dimen/options_menu_text_size" />

            </com.google.android.material.card.MaterialCardView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>